# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: test_statistics_service.py
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py  printer.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/web-login/: log.html  output.xml  pyproject.toml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/: kauppa.py  ostoskori.py  varasto.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/int-joukko/src/tests/: int_joukko_test.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko5/tennis/src/tests/: tennis_game_test.py
viikko6/query-language/: PULL.md
viikko6/query-language/src/: index.py  matchers.py  statistics.py
viikko7/kivi-paperi-sakset/: MERGE.md
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py
