[tool.poetry]
name = "Ohtutesting app"
version = "0.1.0"
description = "Sovellus joka toimii testisyötteenä ohtun viikon 2 laskareihin"
license = "MIT"
authors = ["Matti Luukkainen <matti@example.com>", "Kalle Ilves <kalle@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0"
editdistance = "^0.5"

[tool.poetry.dev-dependencies]
coverage = "^7.0"
robotframework = "^4.0"
robotframework-seleniumlibrary = "^5.0"
requests = "^2.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
